tests/NormalTests/paczka1/fuzzy1/96331559.err
Error in line 3: ttEX5AhYSml S636 28,7
Error in line 8: osCCy A134 90,4
Error in line 13: c3tpUBoX0zN S865 14,0
Error in line 18: osCCy A134 84,54
Error in line 11: ttEX5AhYSml S788 239,8
Error in line 24: ttEX5AhYSml S636 49,8
Error in line 27: osCCy S865 98,6
Error in line 26: c3tpUBoX0zN S788 427,0
Error in line 35: S636 A134 3,90
Error in line 23: zF5ZqRwlM S865 40,6
